@startuml

title __SHORTVIDEOV2MODULE's Class Diagram__\n

  namespace com.gykj.shortvideov2module {
    class com.gykj.shortvideov2module.TasksCompletedView {
        ~ bitmap : Bitmap
        ~ imgWidth : int
        ~ ingHight : int
        - mCircleColor : int
        - mCirclePaint : Paint
        - mProgress : int
        - mRadius : float
        - mRingColor : int
        - mRingPaint : Paint
        - mRingRadius : float
        - mStrokeWidth : float
        - mTextPaint : Paint
        - mTotalProgress : int
        - mTxtHeight : float
        - mTxtWidth : float
        - mXCenter : int
        - mYCenter : int
        - nRingColor : int
        - nRingPaint : Paint
        + TasksCompletedView()
        + setProgress()
        # onDraw()
        - initAttrs()
        - initVariable()
    }
  }
  

  namespace com.gykj.shortvideov2module {
    class com.gykj.shortvideov2module.VideoActivity {
        {static} - DEFAULT_ORIENTATIONS : SparseIntArray
        {static} - INVERSE_ORIENTATIONS : SparseIntArray
        {static} - SENSOR_ORIENTATION_DEFAULT_DEGREES : int
        {static} - SENSOR_ORIENTATION_INVERSE_DEGREES : int
        - basePath : String
        - flResult : FrameLayout
        - in : Allocation
        - isClick : boolean
        - ivImgCancel : ImageView
        - ivImgSelect : ImageView
        - mBackgroundHandler : Handler
        - mBackgroundThread : HandlerThread
        - mCameraDevice : CameraDevice
        - mCameraOpenCloseLock : Semaphore
        - mCurrentProgress : int
        - mHandler : Handler
        - mIsRecordingVideo : boolean
        - mMediaRecorder : MediaRecorder
        - mNextVideoAbsolutePath : String
        - mPreviewBuilder : Builder
        - mPreviewSession : CameraCaptureSession
        - mPreviewSize : Size
        - mSensorOrientation : Integer
        - mStateCallback : StateCallback
        - mTextureView : TextureView
        - mTotalProgress : int
        - mVideoSize : Size
        - out : Allocation
        - rgbaType : Builder
        - rs : RenderScript
        - videoImage : ImageView
        - videoLogo : ImageView
        - videoName : String
        - yuvToRgbIntrinsic : ScriptIntrinsicYuvToRGB
        - yuvType : Builder
        + bitmap2File()
        {static} + bitmapToNv21()
        + comfireGiveUpCurrentDialog()
        + getVideoThumbnail()
        + nv21ToBitmap()
        + onKeyDown()
        + onResume()
        + onSurfaceTextureAvailable()
        + onSurfaceTextureDestroyed()
        + onSurfaceTextureSizeChanged()
        + onSurfaceTextureUpdated()
        # onCreate()
        {static} - argbToNv21()
        {static} - chooseOptimalSize()
        {static} - chooseVideoSize()
        - closePreviewSession()
        - configureTransform()
        - dealByte()
        - getVideoFilePath()
        - initEvent()
        - openCamera()
        - setUpCaptureRequestBuilder()
        - setUpMediaRecorder()
        - startBackgroundThread()
        - startPreview()
        - startRecordingVideo()
        - startplay()
        - stopRecordingVideo()
        - updatePreview()
    }
  }
  

  namespace com.gykj.shortvideov2module {
    class com.gykj.shortvideov2module.VideoActivity.CompareSizesByArea {
        + compare()
    }
  }
  

  namespace com.gykj.shortvideov2module {
    class com.gykj.shortvideov2module.VideoPlayActivity {
        - Tag : String
        - handler : Handler
        - mMediaPlayer : MediaPlayer
        - mTicker : Runnable
        - onCompletionListener : OnCompletionListener
        - onSeekBarChangeListener : OnSeekBarChangeListener
        - seekBar : SeekBar
        - surface : Surface
        - surfaceTextureListener : SurfaceTextureListener
        - videoImage : ImageView
        - videoPath : String
        # onCreate()
    }
  }
  

  namespace com.gykj.shortvideov2module {
    class com.gykj.shortvideov2module.VideoPlayActivity.PlayerVideoThread {
        + run()
    }
  }
  

  com.gykj.shortvideov2module.TasksCompletedView -up-|> android.view.View
  com.gykj.shortvideov2module.VideoActivity .up.|> android.view.TextureView.SurfaceTextureListener
  com.gykj.shortvideov2module.VideoActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.gykj.shortvideov2module.VideoActivity o-- com.gykj.shortvideov2module.TasksCompletedView : taskView
  com.gykj.shortvideov2module.VideoActivity +-down- com.gykj.shortvideov2module.VideoActivity.CompareSizesByArea
  com.gykj.shortvideov2module.VideoActivity.CompareSizesByArea .up.|> java.util.Comparator
  com.gykj.shortvideov2module.VideoPlayActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.gykj.shortvideov2module.VideoPlayActivity +-down- com.gykj.shortvideov2module.VideoPlayActivity.PlayerVideoThread


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
